--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,14 +15,11 @@ jobs:
 
     - name: Create Standalone Executable
       run: |
-        dotnet publish -c Release -r win10-x64 -o ./abc
+        dotnet publish -c Release -r win10-x64 -o ./output
 
-    - name: Zip Artifacts
-      uses: montudor/action-zip@v1.0.0
-      with:
-        files: ./abc
-        output: WinFormsApp.zip
-
+    - name: Zip artifact for deployment
+      run: zip WinFormsApp.zip ./output -r
+      
     - name: Create Release
       id: create_release
       uses: actions/create-release@v1
