--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,8 +27,10 @@ jobs:
       id: create_release
       uses: actions/create-release@v1
       with:
+        token: ${{ secrets.ReleaseToken }}
         tag_name: v${{ github.run_number }}
         release_name: Release ${{ github.run_number }}
+        
         body: |
           Changes in this release.
 
