--- a/src/xBIMWpfApp/xBIMWpfApp.csproj
+++ b/src/xBIMWpfApp/xBIMWpfApp.csproj
@@ -16,6 +16,8 @@
 
 	<ItemGroup>
 		<PackageReference Include="Microsoft.AspNetCore.Components.WebView.Wpf" Version="8.0.6" />
+		<PackageReference Include="Xbim.Essentials" Version="5.1.341" />
+		<PackageReference Include="Xbim.Geometry" Version="5.1.437" />
 	</ItemGroup>
 
 	<ItemGroup>
