--- a/src/WebviewAppShared/WebviewAppShared.csproj
+++ b/src/WebviewAppShared/WebviewAppShared.csproj
@@ -7,6 +7,10 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+	  <Content Remove="wwwroot\ifcjs\main.js~RF2c9105f.TMP" />
+	</ItemGroup>
+
+	<ItemGroup>
 		<FrameworkReference Include="Microsoft.AspNetCore.App" />
 	</ItemGroup>
 
