--- a/src/xBIMWpfApp/xBIMWpfApp.csproj
+++ b/src/xBIMWpfApp/xBIMWpfApp.csproj
@@ -39,17 +39,13 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<XbimInteropFiles Remove="Xbim.Geometry.Engine32.dll" />
-	</ItemGroup>
-
-	<ItemGroup>
-		<XbimInteropFiles Remove="Xbim.Geometry.Engine64.dll" />
-	</ItemGroup>
-
-	<ItemGroup>
-			  <None Remove="Xbim.Geometry.Engine32.dll" />
-	  <Content Include="Xbim.Geometry.Engine32.dll" />
-<Content Include="Xbim.Geometry.Engine64.dll" />
+		<None Remove="Xbim.Geometry.Engine32.dll" />
+		<Content Include="Xbim.Geometry.Engine32.dll">
+			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</Content>
+		<Content Include="Xbim.Geometry.Engine64.dll">
+			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</Content>
 	</ItemGroup>
 
 </Project>
